release-1.2.4 fixes a bug where the tabs in the stripe sidebar could wrap at certian screen widths. I hope.

--- a/wp-content/themes/norwalk/sass/layout.scss
+++ b/wp-content/themes/norwalk/sass/layout.scss
@@ -331,7 +331,7 @@ article.attachment{margin-bottom:0;
 }
 
 .norwalk-tabs{
-	.tab-button{float:left; position:relative; padding:5px 7px 4px; color:$warm - #444444; background-color:$warm; margin-bottom:-1px; border:1px solid $warm - #444444; border-bottom:0; cursor:pointer; margin-right:2px; -webkit-border-top-left-radius: 3px; -webkit-border-top-right-radius: 3px; -moz-border-radius-topleft: 3px; -moz-border-radius-topright: 3px; border-top-left-radius: 3px; border-top-right-radius: 3px;}
+	.tab-button{float:left; position:relative; padding:5px 4px 4px; color:$warm - #444444; background-color:$warm; margin-bottom:-1px; border:1px solid $warm - #444444; border-bottom:0; cursor:pointer; margin-right:2px; -webkit-border-top-left-radius: 3px; -webkit-border-top-right-radius: 3px; -moz-border-radius-topleft: 3px; -moz-border-radius-topright: 3px; border-top-left-radius: 3px; border-top-right-radius: 3px; letter-spacing:-0.2px;}
 	.tab-button.active{font-weight:bold; background-color:#fff; color:#000; padding-bottom:5px; border-bottom:0;  padding-bottom:6px;}
 	.tab-button .long-text{display:none;}
 	.tab-button.active .long-text{display:inline;}
